# lazyline

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  overhead.py  test_overhead.py
docs/: how-it-works.md  usage.md
skills/lazyline/: SKILL.md
src/lazyline/: __init__.py  __main__.py  discovery.py  export.py  memory.py  models.py  parallel.py  profiling.py  reporting.py  subproc.py
tests/: _parallel_fixture.py  _spicy_constructs.py  test_cli.py  test_discovery.py  test_discovery_namespace.py  test_edge_cases.py  test_export.py  test_has_version.py  test_memory.py  test_parallel.py  test_profiling.py  test_reporting.py  test_subproc.py
