[project]
name = "lazyline"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tomáš Venkrbec", email = "venkrbec.tomas@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["typer>=0.15"]

[project.scripts]
lazyline = "lazyline.__main__:app"

[project.urls]
Homepage = "https://github.com/tvenkrbec/lazyline"
Repository = "https://github.com/tvenkrbec/lazyline"
Issues = "https://github.com/tvenkrbec/lazyline/issues"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=6", "ty>=0.0.1a1", "pre-commit>=4"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]



[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["D", "F", "E", "W", "C901", "I001", "UP", "B", "SIM", "TCH"]
ignore = ["D100", "D104", "D105", "D205", "D400"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["lazyline"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]
"*/__init__.py" = ["F401"]

[tool.coverage.run]
source = ["lazyline"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
