[project]
name = "lazyline"
version = "0.2.0"
description = "Zero-config line-level Python profiler. Profile any package or script with one command — no @profile decorators, no code changes. Automatic subprocess and multiprocessing support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tomáš Venkrbec", email = "venkrbec.tomas@gmail.com" }]
keywords = [
    "profiler",
    "profiling",
    "line-profiler",
    "line-profiling",
    "python-profiler",
    "performance",
    "benchmark",
    "optimization",
    "bottleneck",
    "zero-config",
    "timing",
    "tracing",
    "subprocess-profiling",
    "multiprocessing",
    "cli",
    "developer-tools",
    "debugging",
    "code-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "click>=8.0",
    "line_profiler>=4.1.0",
    "Pygments>=2.14.0",
]

[project.scripts]
lazyline = "lazyline.__main__:app"

[project.urls]
Homepage = "https://github.com/TomasVenkrbec/lazyline"
Repository = "https://github.com/TomasVenkrbec/lazyline"
Documentation = "https://github.com/TomasVenkrbec/lazyline/blob/main/docs/usage.md"
Changelog = "https://github.com/TomasVenkrbec/lazyline/blob/main/CHANGELOG.md"
Issues = "https://github.com/TomasVenkrbec/lazyline/issues"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ty>=0.0.1a1",
    "pre-commit>=4",
    "ruff>=0.11",
    "lazyline",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
pythonpath = ["."]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "ignore:This process .* is multi-threaded:DeprecationWarning",
]



[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["D", "F", "E", "W", "C901", "I001", "UP", "B", "SIM", "TCH"]
ignore = ["D100", "D104", "D105", "D205", "D400"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["lazyline"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]
"benchmarks/*.py" = ["D"]
"*/__init__.py" = ["F401"]

[tool.coverage.run]
source = ["lazyline"]
branch = true
omit = ["*/benchmarks/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
